feat: 完成FM4全功能集成与验收
- 新增SSE事件类型与载荷类型定义
- 修复Blob响应处理逻辑，跳过JSON转换校验
- 新增PDF/Word导出API与组件
- 重构论文筛选与排序参数，兼容FM4字段
- 修复后端CORS跨域配置，支持本地任意端口
- 新增Agent可视化全链路组件与测试
- 新增搜索防抖、加载遮罩、引用溯源等通用组件
- 完成15项FM4验收检查点集成与测试